[gd_scene load_steps=2 format=3 uid="uid://b1en8rl10h7ag"]

[ext_resource type="Script" uid="uid://ubx3c8jhnoxn" path="res://UI/tech_upgrade_popup.gd" id="1_h4ar0"]

[node name="TechUpgradePopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -46.5
offset_right = 10.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4ar0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"
